readme and benchmarking